Updates content description in head

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="author" content="Just Jeo" />    
-    <meta name="description" content="A game created by Just Jeo where players try to break the code by guessing the correct numbers in 10 guesses or less.">
+    <meta name="description" content="All images created on this website were made purely from CSS with no external images.">
 
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" href="favicon.png">  
