Adds text. Explains the purpose of the website. Adds slogan under version text.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,16 @@
 <body>
     <section id="intro-text">
         <h2>Just Pictures Made with CSS</h2>
+
+        <p>All of the images on this website were created using CSS and styling code. There are no actual images (.jpg, .png, etc.) placed in this website.</p>
+
+        <p>This website was made purely for practice of the website creator to refine and try new styling techniques. There is no end goal and will be added to over time.</p>
+
+        <p>Enjoy your stay, no matter how long or short it is.</p>
     </section>
     <section id="version-number">
         <small>Ver. 0.25.02.21</small>
+        <small>Be you; just you</small>
     </section>
 </body>
 </html>
