--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <!-- File Connections -->
     <link rel="stylesheet" href="main.css">
 
-    
+    <!-- Font Family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans" rel="stylesheet">    
 </head>
 <body>
     <section id="intro-text">
