--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <section id="intro-text">
-        <h2>Just Pictures Made with CSS</h2>
+        <h2 class="text-center">Just Pictures Made with CSS</h2>
 
         <p>All of the images on this website were created using CSS and styling code. There are no actual images (.jpg, .png, etc.) placed in this website.</p>
 
@@ -32,7 +32,7 @@
 
         <p>Enjoy your stay, no matter how long or short it is.</p>
     </section>
-    <section id="version-number">
+    <section id="version-number-and-slogan">
         <small>Ver. 0.25.02.21</small>
         <small>Be you; just you</small>
     </section>
