Styles version number and slogan at bottom of page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <p>Enjoy your stay, no matter how long or short it is.</p>
     </section>
-    <section id="version-number-and-slogan">
+    <section id="version-number-and-slogan" class="text-center">
         <small>Ver. 0.25.02.21</small>
         <small>Be you; just you</small>
     </section>
