Begins creation of first image, 'Jeo Logo'. Adds div for creation space. Adds basic styling to give rough outline of image.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 
         <p>Enjoy your stay, no matter how long or short it is.</p>
     </section>
+    <section id="gallery">
+        <div id="gallery-image-1" class="gallery-image">
+            <div id="jeo-logo" class="circle">
+                <div id="jeo-logo-circle" class="circle"></div>
+            </div>
+        </div>
+    </section>
     <section id="version-number-and-slogan" class="text-center">
         <small>Ver. 0.25.02.21</small>
         <small>Be you; just you</small>
