Adds border to box of first image. Centers image within gallery space.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>Enjoy your stay, no matter how long or short it is.</p>
     </section>
     <section id="gallery">
-        <div id="gallery-image-1" class="gallery-image">
+        <div id="gallery-image-1" class="gallery-image quarter-page">
             <div id="jeo-logo" class="circle">
                 <div id="jeo-logo-circle" class="circle"></div>
             </div>
