Adds space for gallery text. Centers img in gallery img space. Adds and updates classes

--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
         <p>Enjoy your stay, no matter how long or short it is.</p>
     </section>
     <section id="gallery">
-        <div id="gallery-image-1" class="gallery-image quarter-page">
-            <div id="jeo-logo" class="circle">
-                <div id="jeo-logo-circle" class="circle"></div>
+        <div id="gallery-image-1" class="quarter-page">
+            <div class="text-center gallery_text">
+                <h4>Jeo's Logo</h4>
+            </div>
+            <div class="gallery_image">
+                <div id="jeo-logo" class="circle">
+                    <div id="jeo-logo-circle" class="circle"></div>
+                </div>
             </div>
         </div>
     </section>
