Renames id for Jeo logo to be more specific.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="gallery_image">
                 <div id="jeo-logo" class="circle">
-                    <div id="jeo-logo-circle" class="circle"></div>
+                    <div id="jeo-logo-white-outer-circle" class="circle"></div>
                 </div>
             </div>
         </div>
