Adds signature comment into document head

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <!-- Font Family -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans" rel="stylesheet">
+
+    <!-- AYO! This is Jeo! -->
 </head>
 <body>
     <section id="intro-text">
