Adds final innter white circle to jeo logo. Adds styling to center all circles nestled within each other.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             <div class="gallery_image">
                 <div id="jeo-logo" class="circle">
                     <div id="jeo-logo-white-outer-circle" class="circle">
-                        <div id="jeo-logo-black-inner-circle" class="circle"></div>
+                        <div id="jeo-logo-black-inner-circle" class="circle">
+                            <div id="jeo-logo-white-inner-circle" class="circle"></div>
+                        </div>
                     </div>
                 </div>
             </div>
