Updates version number. Adds rectangle element to jeo logo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                 <div id="jeo-logo" class="circle">
                     <div id="jeo-logo-white-outer-circle" class="circle">
                         <div id="jeo-logo-black-inner-circle" class="circle">
-                            <div id="jeo-logo-white-inner-circle" class="circle"></div>
+                            <div id="jeo-logo-white-inner-circle" class="circle">
+                                <div id="jeo-logo-vertical-rectangle" class="rectangle"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -51,7 +53,7 @@
         </div>
     </section>
     <section id="version-number-and-slogan" class="text-center">
-        <small>Ver. 0.25.03.04</small>
+        <small>Ver. 0.25.03.19</small>
         <small>Be you; just you</small>
     </section>
 </body>
