Creates new element for Jeo logo section. Adds basic styling to allow new element to be seen.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                     <div id="jeo-logo-white-outer-circle" class="circle">
                         <div id="jeo-logo-black-inner-circle" class="circle">
                             <div id="jeo-logo-white-inner-circle" class="circle">
-                                <div id="jeo-logo-black-vertical-rectangle" class="rectangle"></div>
+                                <div id="jeo-logo-white-vertical-rectangle" class="rectangle">
+                                    <div id="jeo-logo-black-vertical-rectangle" class="rectangle"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
